--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
     "helmet": "^8.1.0",
@@ -25,6 +26,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "nodemailer": "^7.0.11",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "xss": "^1.0.15"
   }
 }
